--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   flutter_native_splash: ^2.3.1
   flutter_typeahead: ^4.6.2
   get: ^4.6.5
+  json_annotation: ^4.8.1
+  carousel_slider: ^4.2.1
 
 
 dev_dependencies:
