--- a/packages/auth_repository/ios/Flutter/Generated.xcconfig
+++ b/packages/auth_repository/ios/Flutter/Generated.xcconfig
@@ -1,6 +1,6 @@
 // This is a generated file; do not edit or check into version control.
 FLUTTER_ROOT=C:\src\flutter
-FLUTTER_APPLICATION_PATH=D:\Flutter-Project\SampleApplication\packages\auth_repository
+FLUTTER_APPLICATION_PATH=C:\Users\LOKESH TN\Documents\Main Project\SampleApplication\packages\auth_repository
 COCOAPODS_PARALLEL_CODE_SIGN=true
 FLUTTER_TARGET=lib\main.dart
 FLUTTER_BUILD_DIR=build
