--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   flutter_native_splash: ^2.3.1
   flutter_typeahead: ^4.6.2
   get: ^4.6.5
+  firebase_core: ^2.14.0
+  firebase_auth: ^4.6.3
 
 
 dev_dependencies:
