--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,9 @@ dependencies:
   get: ^4.6.5
   json_annotation: ^4.8.1
   carousel_slider: ^4.2.1
-
+  firebase_core: ^2.14.0
+  firebase_auth: ^4.6.3
+  countries_flag: ^1.0.0
 
 dev_dependencies:
   flutter_test:
