Added pinput package for otp reading

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   firebase_core: ^2.14.0
   firebase_auth: ^4.6.3
   countries_flag: ^1.0.0
+  pinput: ^2.2.31
+
 
 dev_dependencies:
   flutter_test:
