--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   firebase_auth: ^4.6.3
   countries_flag: ^1.0.0
   pinput: ^2.2.31
+  cloud_firestore: ^4.8.0
 
 
 dev_dependencies:
