--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   pinput: ^2.2.31
   cloud_firestore: ^4.8.0
   image_picker: ^1.0.0
+  provider: ^6.0.5
   
 dev_dependencies:
   flutter_test:
