--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   cloud_firestore: ^4.8.0
   image_picker: ^1.0.0
   provider: ^6.0.5
+  geolocator: ^9.0.2
+  geocoding: ^2.1.0
   
 dev_dependencies:
   flutter_test:
