--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   provider: ^6.0.5
   geolocator: ^9.0.2
   geocoding: ^2.1.0
+  carousel_indicator: ^1.0.6
   
 dev_dependencies:
   flutter_test:
@@ -81,6 +82,17 @@ flutter:
     - assets/images/user.png
     - assets/images/home_flash_image.png
     - assets/images/cover_image.jpg
+    - assets/images/urin-test.avif
+    - assets/images/test1.jpg
+    - assets/images/cogh.jpg
+    - assets/images/corona.jpg
+    - assets/images/blood.png
+    - assets/images/flask.jpg
+    - assets/images/why-us1.png
+    - assets/images/why-us2.png
+    - assets/images/why-us3.png
+    - assets/images/why-us4.png
+    - assets/images/lab1.png
     
 
   # An image asset can refer to one or more resolution-specific "variants", see
