--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   geocoding: ^2.1.0
   carousel_indicator: ^1.0.6
   intl: ^0.17.0
+  step_progress_indicator: ^1.0.2
   
 dev_dependencies:
   flutter_test:
@@ -94,6 +95,12 @@ flutter:
     - assets/images/why-us3.png
     - assets/images/why-us4.png
     - assets/images/lab1.png
+    - assets/images/lab-logo1.jpeg
+    - assets/images/lab-logo2.jpeg
+    - assets/images/lab-log3.jpeg
+    - assets/images/lab-log4.png
+    - assets/images/lab-log5.png
+    - assets/images/lab-log6.png
     
 
   # An image asset can refer to one or more resolution-specific "variants", see
