--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   carousel_indicator: ^1.0.6
   intl: ^0.17.0
   step_progress_indicator: ^1.0.2
+  http: ^0.13.3
   
 dev_dependencies:
   flutter_test:
