--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,7 +53,7 @@ dependencies:
   intl: ^0.17.0
   step_progress_indicator: ^1.0.2
   http: ^0.13.3
-  
+  url_launcher: ^6.1.12
 dev_dependencies:
   flutter_test:
     sdk: flutter
