--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   http: ^0.13.3
   url_launcher: ^6.1.12
   loading_indicator: ^3.1.1
+  loadmore: ^2.0.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
