pushing map update

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   url_launcher: ^6.1.12
   loading_indicator: ^3.1.1
   loadmore: ^2.0.1
+  open_street_map_search_and_pick: ^0.1.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
