some internal configuration changes done

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,9 @@ dependencies:
   loading_indicator: ^3.1.1
   loadmore: ^2.0.1
   open_street_map_search_and_pick: ^0.1.0
+  firebase_storage: ^11.2.6
+
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -88,24 +91,12 @@ flutter:
     - assets/images/rotation.png
     - assets/images/user.png
     - assets/images/home_flash_image.png
-    - assets/images/cover_image.jpg
-    - assets/images/urin-test.avif
-    - assets/images/test1.jpg
-    - assets/images/cogh.jpg
-    - assets/images/corona.jpg
-    - assets/images/blood.png
     - assets/images/flask.jpg
     - assets/images/why-us1.png
     - assets/images/why-us2.png
     - assets/images/why-us3.png
     - assets/images/why-us4.png
     - assets/images/lab1.png
-    - assets/images/lab-logo1.jpeg
-    - assets/images/lab-logo2.jpeg
-    - assets/images/lab-log3.jpeg
-    - assets/images/lab-log4.png
-    - assets/images/lab-log5.png
-    - assets/images/lab-log6.png
     
 
   # An image asset can refer to one or more resolution-specific "variants", see
