--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   loadmore: ^2.0.1
   open_street_map_search_and_pick: ^0.1.0
   firebase_storage: ^11.2.6
+  badges: ^3.1.2
 
   
 dev_dependencies:
