--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,9 @@ dependencies:
   open_street_map_search_and_pick: ^0.1.0
   firebase_storage: ^11.2.6
   badges: ^3.1.2
+  
+  telephony: ^0.2.0
+  otp_text_field: ^1.1.3
 
   
 dev_dependencies:
@@ -101,10 +104,14 @@ flutter:
     - assets/images/MedCapH.jpg
     - assets/images/5856.jpg
     - assets/images/men1.jpg
-    - assets/images/women1.jpg
+    - assets/images/women1.png
     - assets/images/women2.jpg
     - assets/images/women3.jpg
     - assets/images/fam1.jpg
+    - assets/images/women4.png
+    - assets/images/men2.png
+    - assets/images/men3.png
+    - assets/images/men4.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
