--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,7 +52,7 @@ dependencies:
   intl: ^0.17.0
   step_progress_indicator: ^1.0.2
   http: ^0.13.3
-  url_launcher: ^6.1.12
+  url_launcher: ^6.1.14
   loading_indicator: ^3.1.1
   loadmore: ^2.0.1
   open_street_map_search_and_pick: ^0.1.0
@@ -61,6 +61,7 @@ dependencies:
   
   telephony: ^0.2.0
   otp_text_field: ^1.1.3
+  google_fonts: ^4.0.4
 
   
 dev_dependencies:
