--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ dependencies:
   telephony: ^0.2.0
   otp_text_field: ^1.1.3
   google_fonts: ^4.0.4
+  cc_avenue: ^1.0.3
 
   
 dev_dependencies:
@@ -115,6 +116,7 @@ flutter:
     - assets/images/men4.png
     - assets/images/blood-tube.png
     - assets/images/blood-test.png
+    - assets/images/How_it_works.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
