--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,7 +63,8 @@ dependencies:
   otp_text_field: ^1.1.3
   google_fonts: ^4.0.4
   cc_avenue: ^1.0.3
-
+  upi_india: ^3.0.1
+  easy_upi_payment: ^0.1.5
   
 dev_dependencies:
   flutter_test:
