--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -120,6 +120,11 @@ flutter:
     - assets/images/blood-test.png
     - assets/images/How_it_works.png
     - assets/images/empty-cart.jpeg
+    - assets/images/about.jpeg
+    - assets/images/home.jpeg
+    - assets/images/setting.jpeg
+    - assets/images/support.jpeg
+    - assets/images/profile.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
