--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -128,6 +128,7 @@ flutter:
     - assets/images/support.jpeg
     - assets/images/profile.png
     - assets/images/Designer.jpeg
+    - assets/images/payment-success.jpeg 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
