Created order tracker design

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -129,6 +129,7 @@ flutter:
     - assets/images/profile.png
     - assets/images/Designer.jpeg
     - assets/images/payment-success.jpeg 
+    - assets/images/icons8-laboratory-50.png
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
