Created address form

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -130,6 +130,8 @@ flutter:
     - assets/images/Designer.jpeg
     - assets/images/payment-success.jpeg 
     - assets/images/icons8-laboratory-50.png
+    - assets/images/home.jpg
+    - assets/images/lab.jpg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
