--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -123,15 +123,13 @@ flutter:
     - assets/images/How_it_works.png
     - assets/images/empty-cart.jpeg
     - assets/images/about.jpeg
-    - assets/images/home.jpeg
     - assets/images/setting.jpeg
     - assets/images/support.jpeg
     - assets/images/profile.png
     - assets/images/Designer.jpeg
     - assets/images/payment-success.jpeg 
-    - assets/images/icons8-laboratory-50.png
-    - assets/images/home.jpg
-    - assets/images/lab.jpg
+    - assets/images/home.png
+    - assets/images/lab.png
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
