--- a/flutter_native_splash.yaml
+++ b/flutter_native_splash.yaml
@@ -10,8 +10,8 @@ flutter_native_splash:
   # of your splash screen to a solid color.  Use background_image to set the background of your
   # splash screen to a png image.  This is useful for gradients. The image will be stretch to the
   # size of the app. Only one parameter can be used, color and background_image cannot both be set.
-  color: "#42a5f5"
-  background_image: "assets/home_flash_image.png"
+  color: "#FFFFFF"
+  image: assets\images\Logo_white.png
 
   # Optional parameters are listed below.  To enable a parameter, uncomment the line by removing
   # the leading # character.
@@ -35,7 +35,7 @@ flutter_native_splash:
   # background_image_dark must be specified.  color_dark and background_image_dark cannot both be
   # set.
   #color_dark: "#042a49"
-  background_image_dark: "assets/home_flash_image.png"
+  #background_image_dark: "assets/home_flash_image.png"
   #image_dark: assets/splash-invert.png
   #branding_dark: assets/dart_dark.png
 
@@ -53,8 +53,8 @@ flutter_native_splash:
     #image: assets/android12splash.png
 
     # Splash screen background color.
-    color: "#42a5f5"
-    background_image: "assets/home_flash_image.png"
+    color: "#FFFFFF"
+    image: assets\images\Logo_white.png
     # App icon background color.
     #icon_background_color: "#111111"
 
@@ -72,7 +72,7 @@ flutter_native_splash:
   # platform.
   #android: false
   #ios: false
-  #web: false
+  web: false
 
   # Platform specific images can be specified with the following parameters, which will override
   # the respective parameter.  You may specify all, selected, or none of these parameters:
