--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -158,6 +158,7 @@ flutter:
     - assets/images/launching.gif
     - assets/images/search.gif
     - assets/images/paymentDone.gif
+    - assets/images/editProfile.gif
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
