--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -151,6 +151,7 @@ flutter:
     - assets/images/search.gif
     - assets/images/paymentDone.gif
     - assets/images/editProfile.gif
+    - assets/images/payment-service-not-available.png
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
