--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,6 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  flutter_native_splash: ^2.3.1
   flutter_typeahead: ^4.6.2
   get: ^4.6.5
   carousel_slider: ^4.2.1
@@ -68,6 +67,8 @@ dependencies:
   another_stepper: ^1.2.2
   phonepe_payment_sdk: ^1.0.4
   crypto: ^3.0.3
+  animated_splash_screen: ^1.3.0
+  flutter_svg: ^2.0.9
   
 dev_dependencies:
   flutter_test:
@@ -156,6 +157,7 @@ flutter:
     - assets/images/home-nurse-care.png
     - assets/images/home-doctor-visit.png
     - assets/images/home-physiotherapy-care.png
+    - assets/images/logo.svg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
