--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <!-- <uses-permission android:name="android.permission.READ_SMS" />
     <uses-permission android:name="android.permission.RECEIVE_SMS"/> -->
    <application
-        android:label="medcapH"
+        android:label="Medcaph"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
