--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 1.0.0+2
 
 environment:
   sdk: '>=2.19.6 <3.0.0'
@@ -68,8 +68,11 @@ dependencies:
   another_stepper: ^1.2.2
   phonepe_payment_sdk: ^1.0.4
   crypto: ^3.0.3
-  sms_user_consent: ^0.1.0
-  
+  #sms_user_consent: ^0.1.0
+  # sms_user_consent:
+  #   git:
+  #     url: https://github.com/ctnataman/sms_user_consent
+  #     ref: master # branch name
 dev_dependencies:
   flutter_test:
     sdk: flutter
